<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Onboard</string>
    <string name="login_logo">Onboard</string>
    <string name="login_userName">账号:</string>
    <string name="login_userName_hint">输入账号/邮箱</string>
    <string name="login_password">密码:</string>
    <string name="login_password_hint">输入密码</string>
    <string name="login_reg">注册帐号</string>
    <string name="login_button">登  录</string>
    <string name="login_rememberPW">记住密码:</string>
    <string name="login_autoLogin">自动登录:</string>
    <string name="login_rememberMe">记住我的登录信息</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="download">下载</string>

    <string name="setting_head_title">系统设置</string>

    <string-array name="accordion_sections">
        <item>无分组</item>
        <item>开发部</item>
        <item>市场部</item>
        <item>财务部</item>
    </string-array>

    <integer-array name="accordion_visibility">
        <item>1</item>
        <item>1</item>
        <item>0</item>
        <item>0</item>
    </integer-array>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="agenda_today">TODAY, %1$s</string>
    <string name="agenda_yesterday">YESTERDAY, %1$s</string>
    <string name="agenda_tomorrow">TOMORROW, %1$s</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today_at_time_fmt">Today at %s</string>
    <string name="tomorrow_at_time_fmt">Tomorrow at %s</string>
    <string name="date_time_fmt" formatted="false">%s, %s</string>
    <string name="no_title_label">(No title)</string>
    <string name="event_create">"New event"</string>
    <string name="day_view_new_event_hint">+ New event</string>
	<string name="new_event_dialog_label">"New event"</string>
	<string name="new_event_dialog_option">"New event"</string>
	<string name="template_announce_item_index">Event</string>
    
</resources>